Migrated things to JDK 22